--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.0.0",
     "@nuxt/devtools": "latest",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@unocss/nuxt": "^0.57.7",
     "eslint": "^8.54.0",
     "nuxt": "^3.8.2",
