--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "eslint . --fix"
   },
   "devDependencies": {
+    "@ant-design-vue/nuxt": "^1.2.0",
     "@antfu/eslint-config": "^2.0.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/color-mode": "^3.3.2",
